tests/paczka1/fuzzy1/49419256.err
Error in line 1: z7b2HE A252 54,5
Error in line 4: mUczd A417 88,3
Error in line 5: mUczd A252 95,0
Error in line 6: mUczd A417 29,8
Error in line 8: qcZOjV A71 70,7
Error in line 26: bqxc A252 90,1
Error in line 33: bqxc A417 9,3
